--- a/squarespace.scss
+++ b/squarespace.scss
@@ -4,7 +4,7 @@
 @import url("https://use.typekit.net/fme8kty.css");
 
 // Font variables - work with Quarto's defaults
-$font-family-sans-serif: "proxima-nova", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
+$font-family-sans-serif: "Helvetica Neue", "proxima-nova", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif !default;
 $font-size-base: 14px !default;
 $font-size-h1: 28px !default;
 $line-height-base: 1.6 !default;
